# fnt_creator

./: CMakeLists.txt  readme.md
3rd/asyncplusplus/include/async++/: task.h
3rd/cmake/: ConfigThirdparty.cmake
3rd/refskia/: CMakeLists.txt
3rd/refskia/prebuilt/windows/x64/: skia.dll.lib
apps/fnt_creator/: Clock.cpp  Clock.h  Common.h  Editor.cpp  Editor.h  FntGen.cpp  FntGen.h  Shader.h  Texture.h  Utils.cpp  Utils.h  main.cpp
example/: .gitignore  3D效果.json  999boot.json  config.json  fnt_creator_edit_config.json  imgui.ini  out.fnt  外发光.json  多层外发光.json  多级颜色渐变.json  文字镂空.json  文字镂空描边.json  普通描边.json  渐变描边.json  英文艺术字.json  阴影.json
